# fighterz

./: .clang-format  CMakeLists.txt  INSTALL.txt  Makefile  README.md
Demo/: README.txt  allegro.cfg  fighterz.cfg
Demo/maps/: fflvl-x.txt
Fighterz-data/allegro/all403_bin-msvc/: all403_bin.txt
Fighterz-data/allegro/allegro-4.0.2-msvc/lib/: alld.lib  allp.lib
Fighterz-data/allegro/dumb.081.x86.msvc/dumb/docs/: dumb.txt  faq.txt  licence.txt  readme.txt  release.txt
Fighterz-data/allegro/dumb.081.x86.msvc/dumb/lib/msvc/: aldmb.lib  dumb.lib  dumbd.lib
Fighterz-data/release/exedat/: exedat.bat
Fighterz-data/release/gfx/: 15_11_2002_FighterzLogot.psd  Fighterz_logo_resized.psd  footer.bmp.psd  ship2.psd  ship5.psd
Fighterz-data/software/devcpp4/: SETUP.INI  SETUP.PKG  _SETUP.2  _SETUP.3  _SETUP.4  _SETUP.LIB
Fighterz/client/: bullet.cpp  collition.c  collition.cpp  common.h  config.c  config.cpp  console.c  console.cpp  cube.c  cube.h  data.h  genproc.c  genproc.cpp  global.c  global.cpp  interface.c  interface.cpp  main.c  main.cpp  main.h  map.c  map.cpp  objects.c  objects.cpp  options.c  options.cpp  parse.cpp  send.c  send.cpp  settings.c  settings.cpp  ship.cpp  socket.c  socket.cpp  sound.h  struct.h  variables.h
Fighterz/client/agup/: aase.c  abeos.c  abeos.h  agtk.c  agup.c  agup.dev  ans.c  aphoton.c
Fighterz/client/alfont/: alfont.h  alfontdll.h
Fighterz/client/project_files/: fighterz.cfg  fighterz.dsp  fighterz.dsw  fighterz.mak  fighterz_client.dsp  fighterz_client.dsw  icon.rc  resource.h
Fighterz/client/project_files/maps/: lvl-x.txt
Fighterz/common/: proto.c  proto.cpp  proto.h  sys.h
Fighterz/doc/: tfighters_proto2.txt
Fighterz/doxygen/: doxygen-client-footer.html  doxygen-client.cfg  doxygen-server-footer.html
Fighterz/mapmaker/: MapMaker.dev  data.h  dialog.c  header.h  help.c  init.c  main.c  mainloop.c  map.c  rsrc.rc  terminate.c
Fighterz/mapmaker/project_files/: project_files.dsp  project_files.dsw
Fighterz/server/: Makefile  bullet.c  collision.c  common.h  console.c  findpath.c  genproc.c  map.c  net.c  packet.c  parse.c  player.c  send.c  server.c  server.h  ship.c  socket.c  struct.h  variables.h
Fighterz/server/maps/: lvl-1.txt  lvl-syz.txt  lvl-x.txt  lvl1.txt
Fighterz/server/project_files/: fighterz_server.dsp  fighterz_server.dsw  tmpdev.dep  tmpdev.dsp  tmpdev.dsw  tmpdev.plg
Fighterz/server/project_files/maps/: lvl2.txt
Fighterz/test/: Makefile  common.h  net.c  test.h
Fighterz[old]/: fighterz.dsp  fighterz.dsw  fighterz.plg  main.cpp  variables.h
Fighterz[old]/Debug/: fighterz.pch
Fighterz[old]/Profile/: fighterz.map  fighterz.pch
Fighterz[old]/Profile/maps/: lvl1.txt
Fighterz[old]/Release/: fighterz.pch
docs/archive/Fighterz-data/allegro/all403_bin-msvc/: msvcmake.bat
docs/archive/Fighterz-data/allegro/allegro-4.0.2-msvc/: install.bat  readme.txt
docs/archive/Fighterz-data/allegro/allegro-4.0.2-msvc/include/allegro/: base.h
docs/archive/Fighterz-data/allegro/allegro-4.0.2-msvc/lib/: aldat.lib  alleg.lib
docs/archive/Fighterz-data/allegro/dumb.081.x86.msvc/dumb/: aldumb.h  dumb.h
docs/archive/Fighterz-data/allegro/dumb.081.x86.msvc/dumb/docs/: howto.txt
docs/archive/Fighterz-data/allegro/dumb.081.x86.msvc/dumb/examples/: dumb.ini  playit.c  plays3m.c  playxm.c
docs/archive/Fighterz-data/allegro/dumb.081.x86.msvc/dumb/lib/msvc/: aldmd.lib
docs/archive/Fighterz-data/release/: README.txt  steering_05.fla
docs/archive/Fighterz-data/release/gfx/: radar.psd  ship1.psd  ship3.psd  ship4.psd  stars1.bmp.psd  stars2.bmp.psd  visitor2.pcx
docs/archive/Fighterz-data/software/devcpp4/: _SETUP.1  _SETUP.5  _SETUP.6
docs/archive/Fighterz[old]/: fighterz.dep  fighterz.mak  main.h  notepad.txt
docs/archive/www.fighterz.net/files/: tfighterz-all-src1.1.tgz
docs/archive/www.fighterz.net/images/: login.php.psd  stats.psd
docs/changes/: README.txt  changes.diff  fighterz_client.ncb  fighterz_client.opt  intro.mp3f  intro.xm
resources/: fighterz.cfg  help.txt  screen163234.pcx
resources/maps/: lvl-x2.txt  lvl1.txt  lvl1b.txt
src/client/: config.c  data.h  map.c  objects.c  options.c  settings.c  socket.c  sound.h  struct.h  variables.h
src/client/agup/: abeos.c  agtk.c  agupitrn.h  ans.c  ans.h  aphoton.c  aphoton.h  awin95.c
src/client/alfont/: alfont.h  alfontdll.h
src/client/project_files/: arcade3.pcx  fighterz.cfg  fighterz_client.dsp  fighterz_client.dsw  icon.rc  resource.h
src/common/: proto.c  proto.h
src/doxygen/: doxygen-server.cfg
src/mapmaker/: MapMaker.dev  help.txt  mainloop.c  map.c  rsrc.rc
src/mapmaker/project_files/: project_files.dsw
src/server/: Makefile  collision.c  common.h  console.c  findpath.c  genproc.c  map.c  net.c  packet.c  player.c  server.c  ship.c  socket.c  struct.h
src/server/maps/: lvl-2.txt  lvl-3.txt  lvl-x.txt
src/server/project_files/: Makefile  fighterz_server.dsp  fighterz_server.dsw  tmpdev.mak
src/server/project_files/maps/: lvl-syz.txt
src/test/: Makefile  main.c  packet.c  send.c
www.fighterz.net/files/: INSTALL.txt  fighterz.rar  tfighterz-client.rar
www.fighterz.net/images/: ip.psd
